<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/my_fragment_color"
    android:orientation="vertical"
    tools:context=".SimpleFragment">


    <TextView
        android:id="@+id/fragment_header"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/question_article"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/yes_message" />

        <RadioButton
            android:id="@+id/radio_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/no_message" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_emitirVoto"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emitir_voto" />


</LinearLayout>
